<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="MainActivity_StartScreen">


    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar_aiming"
        android:id="@+id/seekbar_aiming"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView_Info_button_start"
        android:layout_alignStart="@+id/textView_Info_button_start"
        android:layout_marginTop="49dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:id="@+id/button_start"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tV_Info_seekbar_aiming"
        android:id="@+id/textView_Info_seekbar_aiming"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/seekbar_aiming"
        android:layout_alignEnd="@+id/seekbar_aiming" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tView_Info_start_pause_stop"
        android:id="@+id/textView_Info_start_pause_stop"
        android:layout_below="@+id/seekbar_aiming"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tV_Info_button_start"
        android:id="@+id/textView_Info_button_start"
        android:layout_above="@+id/button_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/button"
        android:layout_below="@+id/textView_Info_start_pause_stop"
        android:clickable="false"
        android:enabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pause"
        android:id="@+id/button2"
        android:clickable="false"
        android:enabled="false"
        android:layout_below="@+id/textView_Info_start_pause_stop"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:id="@+id/button3"
        android:clickable="false"
        android:enabled="false"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

</RelativeLayout>
